# qr_generator

./: .gitignore  README.md  pyproject.toml
app/api/: index.py  qr.py  root.py
app/application/: qr.py
app/main/: web.py
app/templates/: index.html
